--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="preview">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf"
+      <a class="preview-link"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="application">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
@@ -25,15 +25,15 @@
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="edit-button">Edit</button>
+          <button class="delete-button"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="edit-button">Save</button>
+          <button class="delete-button"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -42,8 +42,8 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="edit-button">Edit</button>
+          <button class="delete-button"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
