--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -11,7 +11,7 @@
       <a class="preview-link"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="application">
+    <div class="app">
       <p id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -25,15 +25,15 @@
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
+          <button class="edit-btn">Edit</button>
+          <button class="delete-btn"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit-button">Save</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
+          <button class="edit-btn">Save</button>
+          <button class="delete-btn"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
@@ -42,8 +42,8 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
+          <button class="edit-btn">Edit</button>
+          <button class="delete-btn"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
