--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -7,43 +7,49 @@
   </head>
   <body>
     <div class="preview">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="preview-img" src="./eisenhower-matrix.jpg">
       <a class="preview-link"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="app">
       <p id="add-item">
-        <label for="new-task">Add Item</label>
+        <label class="add-item-heading" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <button class="btn-add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+      <h3 class="procedure-heading">Todo</h3>
+      <ul id="incomplete-tasks" class="task-list">
+        <li class="task-process">
+          <input class="checkbox" type="checkbox">
+          <label class="task task-heading">Pay Bills</label>
+          <input type="text" class="task task-item">
           <button class="edit-btn">Edit</button>
-          <button class="delete-btn"><img src="./remove.svg"></button>
+          <button class="delete-btn">
+            <img class="delete-btn-img" src="./remove.svg">
+          </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+        <li class="edit-mode task-process">
+          <input class="checkbox" type="checkbox">
+          <label class="task task-heading">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-item">
           <button class="edit-btn">Save</button>
-          <button class="delete-btn"><img src="./remove.svg"></button>
+          <button class="delete-btn">
+            <img class="delete-btn-img" src="./remove.svg">
+          </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+      <h3 class="procedure-heading">Completed</h3>
+      <ul id="completed-tasks" class="task-list">
+        <li class="task-process">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="task task-heading">See the Doctor</label>
+          <input type="text" class="task task-item">
           <button class="edit-btn">Edit</button>
-          <button class="delete-btn"><img src="./remove.svg"></button>
+          <button class="delete-btn">
+            <img class="delete-btn-img" src="./remove.svg">
+          </button>
         </li>
       </ul>
     </div>
