--- a/clean-code-s1e1/index.html
+++ b/clean-code-s1e1/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <section class="preview">
-        <img class="preview-img" src="./eisenhower-matrix.jpg">
+        <img class="preview-img" src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
         <a class="preview-link"
             href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </section>
@@ -28,7 +28,7 @@
             <input type="text" class="task task-item">
             <button class="edit-btn">Edit</button>
             <button class="delete-btn">
-              <img class="delete-btn-img" src="./remove.svg">
+              <img class="delete-btn-img" src="./remove.svg" alt="delete button">
             </button>
           </li>
           <li class="edit-mode task-process">
@@ -37,7 +37,7 @@
             <input type="text" value="Go Shopping" class="task task-item">
             <button class="edit-btn">Save</button>
             <button class="delete-btn">
-              <img class="delete-btn-img" src="./remove.svg">
+              <img class="delete-btn-img" src="./remove.svg" alt="delete button">
             </button>
           </li>
         </ul>
@@ -49,7 +49,7 @@
             <input type="text" class="task task-item">
             <button class="edit-btn">Edit</button>
             <button class="delete-btn">
-              <img class="delete-btn-img" src="./remove.svg">
+              <img class="delete-btn-img" src="./remove.svg" alt="delete button">
             </button>
           </li>
         </ul>
